Network lines animation

--- a/src/_includes/_partials/app-footer.njk
+++ b/src/_includes/_partials/app-footer.njk
@@ -7,6 +7,12 @@
 #}
 
 <footer class="app-footer">
+  <!--
+  @see: https://count.ly/web-analytics
+  @see: https://mozilla.github.io/nunjucks/templating.html#include
+  --> 
+  {% include "_images/network-lines.svg" ignore missing %}
+
   <div class="container">
 
     <!-- Deck 1: Language Switcher -->
