--- a/src/_includes/_partials/app-footer.njk
+++ b/src/_includes/_partials/app-footer.njk
@@ -72,6 +72,11 @@
     <!-- Deck 5: Synthesis -->
     <div class="app-footer__synthesis text-sm-1--right">
       <ul>
+        <li><a href="/privacy-policy/">Privacy Policy</a></li>
+        <li><a href="/terms-of-service/">Terms of Service</a></li>
+        <li><a href="/code-of-conduct/">Code of Conduct</a></li>
+      </ul>
+      <ul>
         <li>{{ translation[app.locale].productName }}: <span>{{ app.name }}</span></li>
         <li>{{ translation[app.locale].clientVersion }}: <span>{{ app.version }}</span></li>
       </ul>
