--- a/src/contact.njk
+++ b/src/contact.njk
@@ -46,7 +46,8 @@
         method="post"
         accept-charset="UTF-8"
         enctype="multipart/form-data"
-        style="margin: 0;">
+        style="margin: 0;"
+        autocomplete="off">
 
         <!-- Input: Name -->
         <div class="form__collection">
