--- a/src/contact.njk
+++ b/src/contact.njk
@@ -89,7 +89,8 @@
             name="message"
             id="message"
             rows="3"
-            required="required"></textarea>
+            required
+            autocomplete="off"></textarea>
         </div>
 
         <!-- Google reCAPTCHA -->
