Gradient added, banner changed

--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -61,7 +61,7 @@
     {%- endif %}
 
     {% include "_partials/app-header.njk" %}
-    <main class="container">
+    <main class="container" style="overflow: initial;">
       {#
         Render any page content (unescaped) that uses this layout within this block
         NOTE: Your "dynamic" content goes here
