--- a/src/contact.njk
+++ b/src/contact.njk
@@ -33,7 +33,7 @@
       <!-- Headline -->
       <div class="headline headline--xl headline--labeled">
         <h1 class="headline__title">{{ title }}</h1>
-        <p class="headline__description">We are committed to open communication with our community, and we welcome inquiries and feedback of all kinds.</p>
+        <p class="headline__description">We are committed to open communication with our community, and we welcome inquiries and feedback of all kinds. Get in touch if you have any questions about the product.</p>
       </div>
 
       <p>Fill out our contact form below to get in touch with us. Please, provide as much information as possible for us to help you with your inquiry.</p>
