--- a/src/docs/index.njk
+++ b/src/docs/index.njk
@@ -30,7 +30,7 @@
       <!-- Headline -->
       <div class="headline headline--xl headline--labeled">
         <h1 class="headline__title">Docs</h1>
-        <p class="headline__description">Learn how to start using a command-line tool to cover your needs.</p>
+        <p class="headline__description">Learn how to start using a tool, discover its power and experience the true CLI.</p>
       </div>
 
       <ul class="list">
