--- a/src/index.njk
+++ b/src/index.njk
@@ -53,7 +53,7 @@
 
           <!-- Button collection -->
           <div class="button-collection button-collection--left-aligned">
-            <a href="/docs" class="button button--outlined-primary button--rounded button--small mr--2 mb--2"><span class="icon icon--get-started"></span>{{ translation[app.locale].documentation }}</a>
+            <a href="/docs" class="button button--outlined-primary button--rounded button--small mr--2 mb--2"><span class="icon icon--get-started"></span>{{ translation[app.locale].learnMore }}</a>
             <!-- WARNING: External link (All external links tend to open in new windows or browser tabs) -->
             <a href="https://github.com/damien-bayes/baythium-packer_client" target="_blank" rel="noopener noreferrer" class="button button--outlined-primary button--rounded button--small mr--2 mb--2"><span class="icon icon--github"></span>{{ translation[app.locale].github }}<span class="icon icon--external-link"></span></a>
             <a href="javascript:" target="_blank" class="button button--primary button--rounded button--small mb--2"><span class="icon icon--download"></span>{{ translation[app.locale].download }}</a>
@@ -112,7 +112,14 @@
   </div>
 
   <!-- Card (Deck 3) -->
-  <div class="card home__github-banner">
+  <div class="card github-banner">
+    <img
+      class="github-banner__octocat"
+      src="/images/github.svg"
+      alt="Github Octocat"
+      loading="eager"
+    />
+
     <div class="card__body">
       <div class="row">
 
