--- a/src/styles/components/app-footer.scss
+++ b/src/styles/components/app-footer.scss
@@ -9,11 +9,13 @@
 .app-footer {
     color: $color--white;
     background-color: $color--primary;
-    background: linear-gradient(120deg, rgba(58,31,93,1) 0%, rgba(40,12,79,1) 100%);
     padding: $indent--xl $indent--base;
     position: relative;
     overflow: hidden;
     z-index: 0;
+
+    // background: linear-gradient(120deg, rgba(58,31,93,1) 0%, rgba(40,12,79,1) 100%);
+    background: radial-gradient(circle at top left,#3a1f5d 0%,#521d91 100%);
 
     #network-lines {
       position: absolute;
