--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -91,6 +91,14 @@
     <!-- <script src="https://cdn.optimizely.com/js/6721bcf5-449a-48f1-80c9-2627acf496ee.js"></script> -->
     <!-- <script async src="//fast.appcues.com/70842.js"></script> -->
 
+    <!--  
+    <script
+      src="https://static.baythium.com/js/security.js"
+      integrity="sha384-oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC"
+      crossorigin="anonymous"
+    ></script>
+    -->
+
     {# CUSTOM IMPORTS #}
     <script src="/js/baythium-aspectus.min.js"></script>
 
