--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -91,6 +91,7 @@
     <!-- <script src="https://cdn.optimizely.com/js/6721bcf5-449a-48f1-80c9-2627acf496ee.js"></script> -->
     <!-- <script async src="//fast.appcues.com/70842.js"></script> -->
 
+    <!-- CSP header example: Content-Security-Policy: require-sri-for script; require-sri-for style; -->
     <!--  
     <script
       src="https://static.baythium.com/js/security.js"
