--- a/src/_includes/_partials/head.njk
+++ b/src/_includes/_partials/head.njk
@@ -56,6 +56,8 @@
   />
   -->
 
+  <meta name="anti-csrf-token" content="JWhpLxPSQSoTLDXm" />
+
   <!-- Open Graph Protocol for Facebook, Telegram -->
   <meta property="og:type" content="website"/>
   <meta property="og:title" content="{{ title }}"/>
