--- a/src/index.njk
+++ b/src/index.njk
@@ -49,6 +49,7 @@
           <div class="headline headline--xl">
             <h1 class="headline__title">{{ app.name }}<span class="badge badge--alternative badge--rounded ml--3">{{ app.version }}</span></h1>
             <p class="headline__description">{{ app.description }}</p>
+            <p class="headline__description">We apply a great <b>compression ratio</b> and <b>decompression</b> cutting-edge techniques</p>
           </div>
 
           <!-- Button collection -->
