--- a/src/styles/components/app-footer.scss
+++ b/src/styles/components/app-footer.scss
@@ -15,7 +15,7 @@
     z-index: 0;
 
     // background: linear-gradient(120deg, rgba(58,31,93,1) 0%, rgba(40,12,79,1) 100%);
-    background: radial-gradient(circle at top left,#3a1f5d 0%,#521d91 100%);
+    background: radial-gradient(circle at top left,#1f1b2e 0%,#1f1b2e 100%);
 
     #network-lines {
       position: absolute;
