--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -261,7 +261,7 @@ $color--light-green: $color--light-green-500 !default;
 $color--lime: $color--lime-500 !default;
 
 /* May be unique in many ways depending on an organization brand colors */
-$color--primary: #3a1f5d !default;
+$color--primary: #1f1b2e !default;
 $color--secondary: #c83660 !default;
 $color--alternative: #f6d365 !default;
 
