--- a/src/styles/custom-baythium-aspectus.scss
+++ b/src/styles/custom-baythium-aspectus.scss
@@ -148,7 +148,7 @@
     padding: $indent--xl;
     position: relative;
 
-    background: radial-gradient(circle at top left,#3a1f5d 0%,#521d91 100%) !important;
+    background: radial-gradient(circle at top left,#1f1b2e 0%,#1f1b2e 100%) !important;
 
     .row {
       display: flex;
